[gd_scene load_steps=7 format=3 uid="uid://dtq452st0b2yu"]

[ext_resource type="Script" path="res://scenes/enemies/gawr_boss.gd" id="1_tlyjb"]
[ext_resource type="Texture2D" uid="uid://cx6bmveui8ju6" path="res://assets_image/Characters/Gawr/Gawr-Sheet.png" id="2_fso2y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13llt"]
size = Vector2(260, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijdn5"]
size = Vector2(140, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kaaq"]
size = Vector2(200, 140)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pd23g"]
size = Vector2(640, 160)

[node name="GawrBoss" type="CharacterBody2D"]
script = ExtResource("1_tlyjb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_13llt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="SpriteBody" type="Sprite2D" parent="."]
texture = ExtResource("2_fso2y")
hframes = 4
vframes = 10
frame = 15

[node name="Head" type="Node2D" parent="."]

[node name="HeadSprite" type="Sprite2D" parent="Head"]

[node name="HeadWeakspot" type="Area2D" parent="Head"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/HeadWeakspot"]
shape = SubResource("RectangleShape2D_ijdn5")

[node name="LeftArm" type="Node2D" parent="."]

[node name="ArmSpriteL" type="Sprite2D" parent="LeftArm"]

[node name="LeftHand" type="Node2D" parent="LeftArm"]

[node name="HandSpriteL" type="Sprite2D" parent="LeftArm/LeftHand"]

[node name="LeftSlamHitbox" type="Area2D" parent="LeftArm/LeftHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm/LeftHand/LeftSlamHitbox"]
shape = SubResource("RectangleShape2D_7kaaq")

[node name="LeftWeakspot" type="Area2D" parent="LeftArm/LeftHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm/LeftHand/LeftWeakspot"]
shape = SubResource("RectangleShape2D_ijdn5")

[node name="RightArm" type="Node2D" parent="."]

[node name="ArmSpriteR" type="Sprite2D" parent="RightArm"]

[node name="RightHand" type="Node2D" parent="RightArm"]

[node name="HandSpriteR" type="Sprite2D" parent="RightArm/RightHand"]

[node name="RightSlamHitbox" type="Area2D" parent="RightArm/RightHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/RightHand/RightSlamHitbox"]
shape = SubResource("RectangleShape2D_7kaaq")

[node name="RightWeakspot" type="Area2D" parent="RightArm/RightHand"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/RightHand/RightWeakspot"]
shape = SubResource("RectangleShape2D_ijdn5")

[node name="Wings" type="Sprite2D" parent="."]

[node name="FirePivot" type="Node2D" parent="."]

[node name="FireSprite" type="Sprite2D" parent="FirePivot"]

[node name="FireHitbox" type="Area2D" parent="FirePivot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirePivot/FireHitbox"]
shape = SubResource("RectangleShape2D_pd23g")
